--- a/certificate.html
+++ b/certificate.html
@@ -258,7 +258,7 @@
 
             <a href="index.html" style="text-decoration: none; color: white;" ><i class="fa fa-home"></i>&nbsp;Home</a>
             <a href="about.html" style="text-decoration: none; color: white;" ><i class="fa fa-clone"></i>&nbsp;About</a>
-            <a href="resume.html" style="text-decoration: none; color: white;"><i class="fa fa-book"></i>&nbsp;Resume</a>
+            <a href="cv.html" style="text-decoration: none; color: white;"><i class="fa fa-book"></i>&nbsp;Resume</a>
             <a href="certificate.html" class=" active" style="text-decoration: none; color: white;"><i class="fa fa-briefcase"></i>&nbsp;Certificates</a>
             <a href="projects.html" style="text-decoration: none; color: white;"><i class="fa fa-phone"></i>&nbsp;Projects</a>
             <a href="contact.html" style="text-decoration: none; color: white;"><i class="fa fa-handshake-o"></i>&nbsp;Contact</a>
