--- a/cv.html
+++ b/cv.html
@@ -540,7 +540,7 @@ body{
 
             <a href="index.html" class="hover "><i class="fa fa-home" ></i>&nbsp;Home</a>
             <a href="about.html" class="hover "><i class="fa fa-clone" ></i>&nbsp;About</a>
-            <a href="RESUME.HTML" class="hover active"><i class="fa fa-book" ></i>&nbsp;Resume</a>
+            <a href="cv.HTML" class="hover active"><i class="fa fa-book" ></i>&nbsp;Resume</a>
             <a href="certificate.html" class="hover"><i class="fa fa-briefcase"></i>&nbsp;Certificates</a>
             <a href="projects.html" class="hover"><i class="fa fa-phone"></i>&nbsp;Projects</a>
             <a href="contact.html" class="hover "><i class="fa fa-handshake-o" ></i>&nbsp;Contact</a>
