--- a/projects.html
+++ b/projects.html
@@ -245,7 +245,7 @@
 
             <a href="index.html" class="hover"><i class="fa fa-home"></i>&nbsp;Home</a>
             <a href="about.html" class="hover "><i class="fa fa-clone"></i>&nbsp;About</a>
-            <a href="resume.html" class="hover"><i class="fa fa-book"></i>&nbsp;Resume</a>
+            <a href="cv.html" class="hover"><i class="fa fa-book"></i>&nbsp;Resume</a>
             <a href="certificate.html" class="hover"><i class="fa fa-briefcase"></i>&nbsp;Certificates</a>
             <a href="projects.html" class="hover active"><i class="fa fa-phone"></i>&nbsp;Projects</a>
             <a href="contact.html" class="hover"><i class="fa fa-handshake-o"></i>&nbsp;Contact</a>
